# assistant

./: .gitignore  README.md  assistant  async_interpreter.py  audio_recorder.py  config.py  device.conf  intercept_notification.py  kernel.py  main.py  nchook_script  pyproject.toml  server.py
configuration/: config.py  device.conf
core/: __init__.py
core/stt/: __init__.py  stt.py
core/tts/: __init__.py  tts.py
core/util/: __init__.py  accumulator.py  audio_utils.py  combo_lock.py  console_utils.py  log.py  process_utils.py  spotify.py
profiles/: default.py  mac_os.py
utils/: __init__.py  file_utils.py  log.py  process_utils.py
