[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["victor <vfranktor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
realtimestt = { path = "../RealtimeSTT", develop = true }
realtimetts = "^0.3.44"
fasteners = "^0.19"
pyxdg = "^0.28"
open-interpreter = "^0.2.5"
litellm = "1.35.38"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
